modify: styling minor fixes, browser visibility unification

--- a/public/style.css
+++ b/public/style.css
@@ -15,10 +15,9 @@ body {
 }
 .menu .you {
   border-right: 1px solid #333;
+  float: right;
   height: 35px;
   line-height: 35px;
-  position: absolute;
-  right: 10%;
 }
 .menu .you .name {
   font-weight: 600;
@@ -28,12 +27,11 @@ body {
   background-color: #000;
   border: none;
   color: #fff;
-  line-height: 35px;
-  position: absolute;
+  float: right;
+  height: 35px;
   padding: 0 10px;
-  right: 0;
   text-align: center;
-  width: 10%;
+  width: 128px;
 }
 .menu .users:hover,
 .menu .users:focus {
@@ -84,9 +82,12 @@ form button {
 }
 #messages li .nr {
   color: #888;
+  display: block;
+  float: left;
+  min-width: 21px;
 }
 #messages li .who {
-  padding: 10px;
+  padding: 5px;
   font-weight: 600;
 }
 #messages li .time {
